<resources>
    <string name="app_name">GridWatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="report_outage_btn">My Power Is Out!</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_log_view_activity">Log</string>
    <string name="open_whatsup_btn">Open WhatsApp</string>
    <string name="send_chat_btn">Send</string>
    <string name="search_chat_label">Search Chat Region</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>
    <string name="report_dialog">To report a power outage, type the following characters and press report.</string>
    <string name="ok">OK</string>
    <string name="no_utility_dialog">Please enter in the name and phone number of your utility company before reporting an outage.</string>
    <string name="action_about">About</string>
    <string name="action_view_log">View Log</string>
    <string name="refresh_log_btn">Refresh Log</string>
    <string name="about_dialog">GridWatch is a collaboration between the University of Michigan Lab11 and the University of California Berkeley. This app is currently in public beta and is not fully functional. Check out our website for more information: http://grid.Watch:8088 .</string>
    <string name="title_activity_register">register</string>
    <string name="success_dialog">Report Sent!</string>
    <string name="failure_dialog">Characters Did Not Match! Report Not Sent!</string>
    <string name="failure_delete_dialog">Characters Did Not Match! Data Not Deleted!</string>
    <string name="update_on_wifi">Send reports only on wifi.</string>
    <string name="no_connection_dialog">Not on the Internet. Can\'t Load Map!</string>
    <string name="no_connection_dialog_delete">Not on the Internet. \n\n Will delete data on next connection! \n\n When your data is deleted, you will receive a notification. \n Additionally, the time the data was deleted will be shown in the settings screen.</string>
    <string name="ask_dialog">We think there might be a power outage in your neighborhood. Is your power on?</string>
    <string name="ask_dialog_affirmative">Yes! My Power Is Out!</string>
    <string name="ask_dialog_negative">No! My Power Is Not Out!</string>
    <string name="ask_map_update_dialog_title">This requires network connection.</string>
    <string name="ask_map_update_dialog">Update Map?</string>
    <string name="ask_map_update_dialog_affirmative">Yes</string>
    <string name="ask_map_update_dialog_negative">No</string>
    <string name="ask_map_update_dialog_remember_affirmative">Always Yes</string>
    <string name="action_chat">Chat</string>
    <string name="confirm_delete_dialog">Are you sure you want to delete your data? \n This can not be undone. \n Please consider the value your data has for researchers in your area.</string>
    <string name="confirm_delete_dialog_affirmative">Yes, please delete my data.</string>
    <string name="confirm_delete_dialog_negative">No.</string>
    <string name="confirm_delete_dialog_two">To delete your data enter the code below.</string>
    <string name="confirm_delete_dialog_affirmative_two">Delete my data.</string>
    <string name="confirm_delete_dialog_negative_two">Nevermind.</string>
    <string name="confirm_delete_dialog_three">Would you mind telling us why you deleted your data? You can leave this blank if you want.</string>
    <string name="confirm_delete_dialog_affirmative_three">Send.</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="email_failed">Not a valid email address!</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Finish</string>
    <string name="submit_confirm_message">You can change any settings later in the settings menu in the app.</string>
    <string name="submit_confirm_button">Create Account</string>
    <string name="label_your_name">Username</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="label_your_password">Password</string>
    <string name="hint_your_password"></string>
    <string name="label_your_password_confirm">Password Again</string>
    <string name="hint_your_password_confirm">Same as above</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_email"></string>
    <string name="label_your_real_name">Your Name</string>
    <string name="label_your_address">Your Home Address</string>
    <string name="hint_your_address">e.g. 100 Main Street, Ann Arbor, MI, USA</string>
    <string name="label_your_age">Your Age</string>
    <string name="hint_your_age">e.g. 23</string>
    <string name="label_your_estimated_outage">Number of Estimated Outages a Week</string>
    <string name="hint_your_estimated_outages">e.g. 3</string>
    <string name="label_your_estimated_outage_length">Estimated Average Outage Duration in Hours</string>
    <string name="hint_your_estimated_outage_length">e.g. 1</string>
    <string name="label_your_utility_name">Your Utility Company Name</string>
    <string name="hint_your_utility_name">e.g. United Power and Light</string>
    <string name="consent_dialog">"GridWatch is a participatory sensing platform and a research project led by the University of Michigan.\n\n GridWatch is designed to crowd-source the sensing of power outages and power restorations. This will build a dataset that will help ensure that the power you are provided is reliable by both helping the utility companies better serve you and by helping researchers understand how the power grid is performing, leading to new innovations. \n\n All data collected by GridWatch is collected in order to increase the accuracy in which the app can sense power outages and restorations. For a walkthrough of the sensing methodology, please go to http://grid.watch. \n\n  Data collected can include; network metadata, cellphone metadata, audio, location, acceleration and other sensor readings. The GridWatch app allows for location sampling to be opted out of at anytime. \n\n Through the GridWatch app, you are able to view and delete all personal data collected by GridWatch. When you request your data to be deleted in app, you will receive confirmation of the deletion in app. \n\n By consenting below, you grant the University of Michigan and its research partners the right to publicly release all of all data gathered by this app, after this data have been made to be anonymous.  \n\n The University of Michigan and its partners agree to not seek any profit from the collection of this information. \n\n For any questions, please contact gridwatchdev@gmail.com."</string>
    <string name="consent_dialog_affirmative">"I consent."</string>
    <string name="consent_dialog_negative">"I do not consent."</string>
    <string name="default_alert_server">http://54.175.143.44:8080/message</string>
    <string name="kafka_topic">gridwatch_v2</string>
    <string name="label_your_beta_name">Beta Name</string>
    <string name="hint_your_beta_name">e.g. AA0001</string>
    <string name="label_your_beta_password">Beta Password</string>
    <string name="hint_your_beta_password"></string>
    <string name="page1">GridWatch helps you report power outages to your utility company.</string>
    <string name="page2">It gives you a button to report an outage with one click.</string>
    <string name="page3">It also automatically senses outages. Let’s walk through how this works.</string>
    <string name="page4">Step 1: When your phone is charging and then stops, GridWatch realizes there might be an outage.</string>
    <string name="page5">Step 2: GridWatch looks to see if you have unplugged your phone by checking to see if it has been shaken.</string>
    <string name="page6">Step 3: GridWatch listens for hum from nearby electrical power or generators.</string>
    <string name="page7">Step 4: If GridWatch can’t hear any hum, it sends a report over the Internet to the GridWatch analysis center where it is relayed to your utility company!</string>
    <string name="page8">GridWatch uses only 200 Bytes of data per report. This is about as much as 1 SMS</string>
    <string name="page9">Watching a couple YouTube videos will have more drain on your battery life than GridWatch will in a year.</string>
    <string name="page10">All the information GridWatch gathers is made available for free. \n\n
        You can see it at www.grid.watch</string>
    <string name="page11">You are able to remove your personal data and control how GridWatch senses at any point through this app.</string>
    <string name="page12">We encourage you to read more about GridWatch here. \n\n
        This is a project from the University of Michigan, the University of California and IBM Research Africa.</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">GridWatch has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help us fix this by sending us error data,
        all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
     <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="notifications_on_wd">Generate notifications on watchdog.</string>
    <string name="make_data_public">Make anonymized data public.</string>
    <string name="delete_data_btn">Delete Your Data</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_category_name">Category Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="action_create_new_category">Create New Discussion</string>
    <string name="title_activity_create_category">Create Category</string>
    <string name="hint_category_and_user_optional">All location information is optional.</string>
    <string name="hint_category_optional">Location is used to search chat rooms.</string>
    <string name="hint_user_optional">Location is used to give you local content.</string>
    <string name="hint_category_and_user_location">Use phones location</string>
    <string name="hint_category_and_user_city">Enter city</string>
    <string name="hint_category_and_user_country">Enter country</string>
    <string name="hint_category_and_user_state">Enter state</string>
    <string name="about_chat_dialog">Global GridWatch chat. To subscribe to a topic, hold the topic name until text turns green. To unsubscribe, hold the topic name until text turns gray. You automatically subscribe to topics you create.</string>
    <string name="create_category_name_1">Create Category</string>
    <string name="chat_name_1">Chat</string>
    <string name="login_name_1">Login</string>
    <string name="gps_err">Can not access location!</string>
    <string name="btn_login">Login</string>
    <string name="btn_create">Create Account</string>
</resources>