<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".mains">
    <item android:id="@+id/action_about" android:title="@string/action_about"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_tutorial" android:title="@string/action_tutorial"
        android:orderInCategory="100" app:showAsAction="never" />


    <item android:id="@+id/action_view_log" android:title="@string/action_view_log"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
    android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew_white_48dp"
        android:orderInCategory="100"
        app:showAsAction="always" />


</menu>
